# wgpu-mandelbrot

./: Cargo.toml  build.rs  flake.nix  shell.nix
src/: main.rs  shader.frag  shader.vert
