[package]
name = "wgpu-mandelbrot"
version = "0.1.0"
authors = ["Lars Mühmel <larsmuehmel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shaderc = "0.7.2"

[dependencies]
image = "0.23.11"
winit = "0.23.0"
wgpu = "0.6.0"
futures = "0.3.8"
bytemuck = "1.4.1"

